// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav menu nav menu when user is signed in 1`] = `
<div>
  <ul
    class="NavSl-sc-gqsck-0 eWpGRM"
    data-testid="menu-links"
  >
    <a
      href="/products"
    >
      Products
    </a>
    <a
      href="/account"
    >
      Account
    </a>
    <a
      href="/order"
    >
      Order
    </a>
    <button
      type="button"
    >
      Sign Out
    </button>
  </ul>
</div>
`;

exports[`Nav menu nav menu when user not signed in 1`] = `
<div>
  <ul
    class="NavSl-sc-gqsck-0 eWpGRM"
    data-testid="menu-links"
  >
    <a
      href="/products"
    >
      Products
    </a>
    <a
      href="/signin"
    >
      Signin
    </a>
  </ul>
</div>
`;
